fix: component was covered by others (#12)

--- a/src/components/AppSidebar/index.less
+++ b/src/components/AppSidebar/index.less
@@ -1,11 +1,10 @@
 @import url('../../styles/variables');
 
 .appSidebarContainer {
-  display: flex;
-  align-items: flex-start;
   height: 100%;
   position: relative;
   margin: 10px;
+  width: 330px;
 }
 
 .appSidebar {
